--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -926,6 +926,7 @@
     "LabelChannelDownloadAgeHelp": "Downloaded content older than this will be deleted. It will remain playable via internet streaming.",
     "ChannelSettingsFormHelp": "Install channels such as Trailers and Vimeo in the plugin catalog.",
     "ButtonOptions": "Options",
+    "ViewTypePlaylists": "Playlists",
     "ViewTypeMovies": "Movies",
     "ViewTypeTvShows": "TV",
     "ViewTypeGames": "Games",
