--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -50,6 +50,8 @@
     "ButtonOrganize": "Organize",
     "LinkedToMediaBrowserConnect": "Linked to Media Browser Connect",
     "HeaderSupporterBenefits": "Supporter Benefits",
+    "HeaderAddUser": "Add User",
+    "LabelAddConnectSupporterHelp": "To add a user who isn't listed, you'll need to first link their accounts to Media Browser Connect from their user profile page.",
     "LabelPinCode": "Pin code:",
     "ButtonOk": "Ok",
     "ButtonCancel": "Cancel",
