--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -404,9 +404,10 @@
     "ButtonRefresh": "Refresh",
     "ButtonAdvancedRefresh": "Advanced Refresh",
     "OptionPriority": "Priority",
-    "OptionRecordOnAllChannels": "Record program on all channels",
-    "OptionRecordAnytime": "Record program at any time",
+    "OptionRecordOnAllChannels": "Record on all channels",
+    "OptionRecordAnytime": "Record at any time",
     "OptionRecordOnlyNewEpisodes": "Record only new episodes",
+    "HeaderRepeatingOptions": "Repeating Options",
     "HeaderDays": "Days",
     "HeaderActiveRecordings": "Active Recordings",
     "HeaderLatestRecordings": "Latest Recordings",
@@ -1407,17 +1408,18 @@
     "LabelShowLibraryTileNamesHelp": "Determines if labels will be displayed underneath library tiles on the home page",
     "OptionEnableTranscodingThrottle": "Enable throttling",
     "OptionEnableTranscodingThrottleHelp": "Throttling will automatically adjust transcoding speed in order to minimize server cpu utilization during playback.",
-    "LabelUploadSpeedLimit": "Upload speed limit (mbps):",
+    "LabelUploadSpeedLimit": "Upload speed limit (Mbps):",
     "OptionAllowSyncTranscoding": "Allow syncing that requires transcoding",
     "HeaderPlayback": "Media Playback",
     "OptionAllowAudioPlaybackTranscoding": "Allow audio playback that requires transcoding",
     "OptionAllowVideoPlaybackTranscoding": "Allow video playback that requires transcoding",
     "OptionAllowMediaPlaybackTranscodingHelp": "Users will receive friendly messages when content is unplayable based on policy.",
     "TabStreaming": "Streaming",
-    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (mbps):",
+    "LabelRemoteClientBitrateLimit": "Remote client bitrate limit (Mbps):",
     "LabelRemoteClientBitrateLimitHelp": "An optional streaming bitrate limit for all remote clients. This is useful to prevent clients from requesting a higher bitrate than your connection can handle.",
     "LabelConversionCpuCoreLimit": "CPU core limit:",
     "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
     "OptionEnableFullSpeedConversion": "Enable full speed conversion",
-    "OptionEnableFullSpeedConversionHelp": "By default, sync conversion is performed at a low speed to minimize resource consumption."
+    "OptionEnableFullSpeedConversionHelp": "By default, sync conversion is performed at a low speed to minimize resource consumption.",
+    "HeaderPlaylists": "Playlists"
 }
