--- a/MediaBrowser.Server.Implementations/Localization/Server/server.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/server.json
@@ -1421,5 +1421,13 @@
     "LabelConversionCpuCoreLimitHelp": "Limit the number of CPU cores that will be used during sync conversion.",
     "OptionEnableFullSpeedConversion": "Enable full speed conversion",
     "OptionEnableFullSpeedConversionHelp": "By default, sync conversion is performed at a low speed to minimize resource consumption.",
-    "HeaderPlaylists": "Playlists"
+    "HeaderPlaylists": "Playlists",
+    "HeaderSelectDate": "Select Date",
+    "HeaderWelcomeExclamation": "Welcome!",
+    "HeaderMyPreferences": "My Preferences",
+    "ButtonMyPreferencesWelcomeYes": "Yes, I'd like to set my preferences now.",
+    "ButtonMyPreferencesWelcomeNo": "No thanks, I'll do it later.",
+    "MyPreferencesWelcomeMessage1": "We've presented your library in a way we think you'll enjoy. The appearance and grouping of content can be changed anytime by adjusting your preferences. Your preferences will apply to all Emby apps.",
+    "MyPreferencesWelcomeMessage2": "Would you like to set your preferences now?",
+    "ToAccessPreferencesHelp": "To access your preferences later, click your user icon in the top right header and select My Preferences."
 }
